--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,26 @@
 <header class="header">
-	<div class="header__container">
-	</div>
+  <div class="header__container">
+    <div class="header__inner">
+      <a class="logo" href="index.html"><img class="logo-img" src="@img/logo.svg" alt="Mozi" /></a>
+      <nav class="header__nav">
+        <ul class="header__menu">
+          <li class="header__menu-item"><a class="header__menu-link" href="#">Products</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="#">About us</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="#">Contact</a></li>
+          <li class="header__menu-item"><a class="red-button header__menu-link" href="#">We’re hiring</a></li>
+        </ul>
+        <div class="menu">
+          <button type="button" class="menu__icon icon-menu"><span></span></button>
+          <!-- <nav class="menu__body">
+            <ul class="menu__list">
+              <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">About us</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">We’re hiring</a></li>
+            </ul>
+          </nav> -->
+        </div>
+      </nav>
+    </div>
+  </div>
 </header>
