--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,9 @@
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
+			@@include('html/_hero.htm',{})
 			<main class="page">
+				@@include('html/_main.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
