закончил вторую страницу

--- a/src/home.html
+++ b/src/home.html
@@ -33,6 +33,7 @@
             </div>
           </div>
         </section>
+
         <section class="section__lines">
           <div class="lines__container">
             <h2 class="lines__title">Our line of products</h2>
@@ -41,12 +42,40 @@
               <div class="lines__item">
                 <img class="lines__item-title-img lines__item-title-img_1" src="@img/lines/lines1.svg" alt="Cookieyes" />
                 <h5 class="lines__item-subtitle">Cookie consent solution for privacy compliance.</h5>
-                <a class="red-button-outline lines__item-link" href="#">Learn more</a>
+                <a class="red-button-outline lines__item-link" href="#">
+                  <span>
+                    <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_3019_386)">
+                      <path d="M7.39375 13.0125L12.9049 7.50002L7.39235 1.98752M1.09375 7.50002H12.9063H1.09375Z" stroke="#BF0830" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </g>
+                      <defs>
+                      <clipPath id="clip0_3019_386">
+                      <rect width="14" height="14" fill="white" transform="translate(0 0.5)"/>
+                      </clipPath>
+                      </defs>
+                      </svg>
+                  </span>
+                  Learn more
+                </a>
               </div>
               <div class="lines__item">
                 <img class="lines__item-title-img lines__item-title-img_2" src="@img/lines/lines2.svg" alt="Webloffee" />
                 <h5 class="lines__item-subtitle">Plugins and extensions for eCommerce needs.</h5>
-                <a class="red-button-outline lines__item-link" href="#">Learn more</a>
+                <a class="red-button-outline lines__item-link" href="#">
+                  <span>
+                    <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_3019_386)">
+                      <path d="M7.39375 13.0125L12.9049 7.50002L7.39235 1.98752M1.09375 7.50002H12.9063H1.09375Z" stroke="#BF0830" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </g>
+                      <defs>
+                      <clipPath id="clip0_3019_386">
+                      <rect width="14" height="14" fill="white" transform="translate(0 0.5)"/>
+                      </clipPath>
+                      </defs>
+                      </svg>
+                  </span>
+                  Learn more
+                </a>
               </div>
             </div>
           </div>
@@ -66,28 +95,70 @@
           <div class="slider-waves__container">
             <h2 class="slider-waves__title">Making waves with innovation</h2>
             <h3 class="slider-waves__subtitle">We are in the news for being market leaders who deliver exceptional products.</h3>
-            <div class="slider-waves__list">
-              <div class="slider-waves__item">
-                <img class="slider-waves__thumb" src="@img/slider-waves/slide1.png" alt="" />
-              </div>
-              <div class="slider-waves__item">
-                <img class="slider-waves__thumb" src="@img/slider-waves/slide2.png" alt="" />
-              </div>
-              <div class="slider-waves__item">
-                <img class="slider-waves__thumb" src="@img/slider-waves/slide3.svg" alt="" />
-              </div>
-              <div class="slider-waves__item">
-                <img class="slider-waves__thumb" src="@img/slider-waves/slide4.svg" alt="" />
-              </div>
-            </div>
-            <div class="slider-waves__arrows">
-              <div class="slider-waves__arrow-left">
-				  <img src="@img/slider-waves/arrow-left.svg" alt="">
-			  </div>
-              <div class="slider-waves__arrow-right">
-				<img src="@img/slider-waves/arrow-left.svg" alt="">
 
-			  </div>
+            <!-- Оболочка слайдера -->
+            <div class="slider-waves__slider swiper">
+              <!-- Двигающееся часть слайдера -->
+              <div class="slider-waves__wrapper swiper-wrapper">
+                <!-- Слайд -->
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide1.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide2.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide3.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide4.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide2.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide3.png" alt="slide" />
+                </div>
+                <div class="slider-waves__slide swiper-slide">
+                  <img class="slider-waves__thumb" src="@img/slider-waves/slide1.png" alt="slide" />
+                </div>
+              </div>
+              <!-- Если нужна навигация (влево/вправо) -->
+              <button type="button" class="swiper-button-prev"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7053 19.2947C12.3158 19.6842 11.6842 19.6842 11.2947 19.2947C10.9054 18.9054 10.9051 18.2743 11.2941 17.8847L16.17 13L5 13C4.44771 13 4 12.5523 4 12C4 11.4477 4.44771 11 5 11L16.17 11L11.2941 6.11531C10.9051 5.72568 10.9054 5.0946 11.2947 4.70531C11.6842 4.31578 12.3158 4.31578 12.7053 4.70531L20 12L12.7053 19.2947Z" fill="#C2D1D9"/>
+                <mask id="mask0_1_258199" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="4" width="16" height="16">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7053 19.2947C12.3158 19.6842 11.6842 19.6842 11.2947 19.2947C10.9054 18.9054 10.9051 18.2743 11.2941 17.8847L16.17 13L5 13C4.44771 13 4 12.5523 4 12C4 11.4477 4.44771 11 5 11L16.17 11L11.2941 6.11531C10.9051 5.72568 10.9054 5.0946 11.2947 4.70531C11.6842 4.31578 12.3158 4.31578 12.7053 4.70531L20 12L12.7053 19.2947Z" fill="white"/>
+                </mask>
+                <g mask="url(#mask0_1_258199)">
+                <rect x="24" y="24" width="24" height="24" transform="rotate(180 24 24)" fill="#424B5A"/>
+                </g>
+                </svg>
+                </button>
+              <button type="button" class="swiper-button-next"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7053 19.2947C12.3158 19.6842 11.6842 19.6842 11.2947 19.2947C10.9054 18.9054 10.9051 18.2743 11.2941 17.8847L16.17 13L5 13C4.44771 13 4 12.5523 4 12C4 11.4477 4.44771 11 5 11L16.17 11L11.2941 6.11531C10.9051 5.72568 10.9054 5.0946 11.2947 4.70531C11.6842 4.31578 12.3158 4.31578 12.7053 4.70531L20 12L12.7053 19.2947Z" fill="#C2D1D9"/>
+                <mask id="mask0_1_258199" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="4" width="16" height="16">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7053 19.2947C12.3158 19.6842 11.6842 19.6842 11.2947 19.2947C10.9054 18.9054 10.9051 18.2743 11.2941 17.8847L16.17 13L5 13C4.44771 13 4 12.5523 4 12C4 11.4477 4.44771 11 5 11L16.17 11L11.2941 6.11531C10.9051 5.72568 10.9054 5.0946 11.2947 4.70531C11.6842 4.31578 12.3158 4.31578 12.7053 4.70531L20 12L12.7053 19.2947Z" fill="white"/>
+                </mask>
+                <g mask="url(#mask0_1_258199)">
+                <rect x="24" y="24" width="24" height="24" transform="rotate(180 24 24)" fill="#424B5A"/>
+                </g>
+                </svg>
+                </button>
+              <!-- Если нужен скролбар -->
+              <div class="swiper-scrollbar"></div>
+            </div>
+            
+          </div>
+        </section>
+        <section class="section__awards section__awards-join">
+          <div class="awards__container">
+            <div class="awards__inner">
+              <div class="awards__text">
+                <h2 class="awards__title">Let's build the next big thing!</h2>
+                <h4 class="awards__subtitle">Looking to achieve great things? You’ve come to the right place.</h4>
+                <a class="red-button-outline awards__button" href="#">Join the team</a>
+              </div>
+              <img class="awards__img" src="@img/awards/awards2.png" alt="Our awards" />
             </div>
           </div>
         </section>
