--- a/src/products.html
+++ b/src/products.html
@@ -6,9 +6,9 @@
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
-			@@include('html/_hero.htm',{})
+			@@include('html/_hero-products.htm',{})
 			<main class="page">
-				@@include('html/_main.htm',{})
+				@@include('html/_products.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
