--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,41 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__inner">
+			<div class="footer__logo-block">
+				<a class="logo" href="index.html"><img src="@img/footer/footer-logo.svg" alt="Mozi"></a>
+				<p class="footer__logo-text">Mozil builds extensions, plugins and apps to simplify work for businesses. </p>
+			</div>
+			<div class="footer__info">
+				<div class="footer__products-block">
+					<h4 class="footer__products-title">Products</h4>
+					<ul class="footer__products-list">
+						<li class="footer__products-item"><a class="footer__products-link" href="#">CookieYes</a></li>
+						<li class="footer__products-item"><a class="footer__products-link" href="#">Webtoffee</a></li>
+					</ul>
+				</div>
+				<div class="footer__about-block">
+					<h4 class="footer__about-title">About</h4>
+					<ul class="footer__about-list">
+						<li class="footer__about-item"><a class="footer__about-link" href="#">About us</a></li>
+						<li class="footer__about-item"><a class="footer__about-link" href="#">Career</a></li>
+						<li class="footer__about-item"><a class="footer__about-link" href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div class="footer__contacts-block">
+					<h4 class="footer__contacts-title">Follow us</h4>
+					<ul class="footer__contacts-list">
+						<li class="footer__contacts-item"><a class="footer__contacts-link" href="#"><img src="@img/footer/facebook.svg" alt="#"></a></li>
+						<li class="footer__contacts-item"><a class="footer__contacts-link" href="#"><img src="@img/footer/twitter.svg" alt="#"></a></li>
+						<li class="footer__contacts-item"><a class="footer__contacts-link" href="#"><img src="@img/footer/instagram.svg" alt="#"></a></li>
+						<li class="footer__contacts-item"><a class="footer__contacts-link" href="#"><img src="@img/footer/linkedin.svg" alt="#"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer-border"></div>
+	<div class="footer-bottom__container">
+		<a class="footer-bottom__copyright" href="#">© 2022 Mozi - All right reserved      </a>
+		<a class="footer-bottom__terms" href="#">Terms & Conditions</a>
 	</div>
 </footer>
