--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -4,7 +4,7 @@
       <a class="logo" href="index.html"><img class="logo-img" src="@img/logo.svg" alt="Mozi" /></a>
       <nav class="header__nav">
         <ul class="header__menu">
-          <li class="header__menu-item"><a class="header__menu-link" href="#">Products</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="products.html">Products</a></li>
           <li class="header__menu-item"><a class="header__menu-link" href="#">About us</a></li>
           <li class="header__menu-item"><a class="header__menu-link" href="#">Contact</a></li>
           <li class="header__menu-item"><a class="red-button header__menu-link" href="#">We’re hiring</a></li>
